john_peacock  r230):

	Restore compatibility with Perl 5.6.x (though not with 5.005_x yet).

john_peacock  r228):

	* lib/version.pod
	    Minor POD fixup (revealed by pod2html).

	* t/coretests.pm
	  t/01base.t
	  t/02derived.t
	    Suppress status messages except when --verbose is used.

jpeacock  r226):

	Release 0.57 to CPAN.  Only bumps $VERSION and slightly improve Build.PL.

jpeacock  r224):

	Next beta release to CPAN.

	* Build.PL
	    Subclass Module::Build and override have_c_compiler() with one that
	    fails without die'ing.

	* README
	  lib/version.pm
	  vperl/vpp.pm
	  vutil/vxs.pm
	    $VERSION++.

jpeacock  r222):

	Beta release to CPAN.

	* README
	  lib/version.pm
	    Bump $VERSION for new release.

	* vperl/vpp.pm
	    Fully implemented UNIVERSAL::VERSION in the pure Perl module.
	    Set explicit $VERSION so that correct module gets loaded during
	    testing.

	* vutil/vxs.pm
	    Set explicit $VERSION so that correct module gets loaded during
	    testing.

	* t/coretests.pm
	    Additional tests (based on bleadperl t/op/use.t).

jpeacock  r220):

	Another workaround for incomplete testing

jpeacock  r218):

	Emergency release to fix up M::B 0.2611 problem

jpeacock  r216):

	Neglected to clean up after XS code (since we are playing games).

jpeacock  r215):

	No, really, the final changes before releasing to CPAN. :(

jpeacock  r214):

	Final updates for 0.54 release to CPAN.

jpeacock  r213):

	Merge from version-combined branch.  Equivalent to RELEASE_0_53_03.

jpeacock  r206):

	Commit changes prior to push to implement pure Perl alternative.

	* Build.PL
	    Need to exclude building on all 5.9.x bleadperl releases.

	* lib/version.pod
	    Forgot a quote in one of the example code fragments.

	* vutil/vutil.c
	    Sync with bleadperl.  Only warn if 'use warnings' is set.

jpeacock  r204):

	Release 0.53 to CPAN.

	* vutil/vutil.c
	    warn() when initialization string contains trailing characters