@@ -22,7 +22,7 @@ version_vxs T_PTROBJ_SPECIAL
 INPUT
 
 T_PTROBJ_SPECIAL
-        if (sv_derived_from($arg, \"${(my $ntt=$ntype)=~s/_/::/g;\$ntt}\")) {
+        if (sv_derived_from($arg, \"version\")) {
 	    $var = $arg;
         }
         else
